--- a/.github/workflows/e2e_tests_1.yaml
+++ b/.github/workflows/e2e_tests_1.yaml
@@ -1,4 +1,4 @@
-name: e2e
+name: e2e_tests_1
 on:
   pull_request:
     types:
@@ -12,7 +12,7 @@ on:
 
       # Ignore updates to the .github directory, unless it's this current file
       - "!.github/**"
-      - ".github/workflows/e2e.yaml"
+      - ".github/workflows/e2e_test_1.yaml"
 
       # Ignore docs and website things
       - "!**.md"
@@ -31,6 +31,10 @@ on:
 
       # Ignore non e2e tests
       - "!tests/pytest/**"
+
+      # Ignore LFAI-UI things (for now?)
+      - "!src/leapfrogai_ui/**"
+      - "!packages/ui/**"
 
       # Ignore changes to the repeater model
       - "!packages/repeater/**"
@@ -75,7 +79,7 @@ jobs:
 
         - name: Create UDS Cluster
           run: |
-            uds deploy k3d-core-slim-dev:0.23.0 --confirm
+            uds deploy k3d-core-slim-dev:0.22.2 --confirm
 
         ##########
         # Supabase
@@ -133,71 +137,3 @@ jobs:
         - name: Cleanup UI
           run: |
             uds zarf package remove leapfrogai-ui --confirm
-
-        ##########
-        # llama
-        ##########
-        - name: Deploy llama-cpp-python
-          run: |
-            make build-llama-cpp-python LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/llama-cpp-python/zarf-package-llama-cpp-python-amd64-e2e-test.tar.zst -l=trace --confirm
-            rm packages/llama-cpp-python/zarf-package-llama-cpp-python-amd64-e2e-test.tar.zst
-
-        - name: Test llama-cpp-python
-          run: |
-            python -m pytest ./tests/e2e/test_llama.py -v
-
-        - name: Cleanup llama-cpp-python
-          run: |
-            uds zarf package remove llama-cpp-python -l=trace --confirm
-
-        ##########
-        # text-embeddings
-        ##########
-        - name: Deploy text-embeddings
-          run: |
-            make build-text-embeddings LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/text-embeddings/zarf-package-text-embeddings-amd64-e2e-test.tar.zst -l=trace --confirm
-            rm packages/text-embeddings/zarf-package-text-embeddings-amd64-e2e-test.tar.zst
-
-        - name: Test text-embeddings
-          run: |
-            python -m pytest ./tests/e2e/test_text_embeddings.py -v
-
-        - name: Cleanup text-embeddings
-          run: |
-            uds zarf package remove text-embeddings -l=trace --confirm
-
-        ##########
-        # whisper
-        ##########
-        - name: Deploy whisper
-          run: |
-            make build-whisper LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/whisper/zarf-package-whisper-amd64-e2e-test.tar.zst -l=trace --confirm
-            rm packages/whisper/zarf-package-whisper-amd64-e2e-test.tar.zst
-
-        - name: Test whisper
-          run: |
-            python -m pytest ./tests/e2e/test_whisper.py -v
-
-        - name: Cleanup whisper
-          run: |
-            uds zarf package remove whisper -l=trace --confirm
-
-        # This cleanup may need to be moved/removed when other packages depend on Supabase
-        - name: Cleanup Supabase
-          run: |
-            uds zarf package remove supabase -l=trace --confirm
-
-        ##########
-        # vLLM
-        # NOTE: We are not deploying and testing vLLM in this workflow because it requires a GPU
-        #     : This workflow simply verifies that the vLLM package can be built
-        ##########
-        - name: Build vLLM
-          run: |
-            make build-vllm LOCAL_VERSION=e2e-test
