--- a/.github/workflows/e2e_tests_1.yaml
+++ b/.github/workflows/e2e_tests_1.yaml
@@ -41,11 +41,11 @@ on:
 
 
 concurrency:
-  group: e2e-${{ github.ref }}
+  group: e2e-1-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  e2e:
+  e2e_1:
     runs-on: ai-ubuntu-big-boy-8-core
     if: ${{ !github.event.pull_request.draft }}
 
