--- a/.github/workflows/e2e-2.yaml
+++ b/.github/workflows/e2e-2.yaml
@@ -12,7 +12,7 @@ on:
 
       # Ignore updates to the .github directory, unless it's this current file
       - "!.github/**"
-      - ".github/workflows/e2e_tests_2.yaml"
+      - ".github/workflows/e2e-2.yaml"
 
       # Ignore docs and website things
       - "!**.md"
@@ -37,7 +37,7 @@ on:
 
 
 concurrency:
-  group: e2e-1-${{ github.ref }}
+  group: e2e-2-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
