--- a/.github/workflows/e2e-2.yaml
+++ b/.github/workflows/e2e-2.yaml
@@ -105,6 +105,7 @@ jobs:
 
         - name: Test llama-cpp-python
           run: |
+            python -m pip install requests
             python -m pytest ./tests/e2e/test_llama.py -v
 
         - name: Cleanup llama-cpp-python
