--- a/packages/k3d-gpu/zarf.yaml
+++ b/packages/k3d-gpu/zarf.yaml
@@ -7,77 +7,26 @@ metadata:
   description: >
     k3d base image with GPU support
 
-variables:
-  - name: REG_PORT
-    description: "Local registry port"
-    default: "5000"
-  - name: UDS_CORE
-    description: "UDS Core version to use"
-    default: "k3d-core-slim-dev:0.24.0"
-  - name: K3S_TAG
-    description: "K3s version to use"
-    default: "v1.28.8-k3s1"
-  - name: CUDA_TAG
-    description: "CUDA version to use"
-    default: "12.4.1-base-ubuntu22.04"
-
 components:
-  - name: create-local-registry
+  - name: create-uds-cluster
     required: true
     actions:
+      onCreate:
+        before:
+          - cmd: |
+              uds pull ghcr.io/defenseunicorns/packages/uds/bundles/###ZARF_PKG_TMPL_UDS_FLAVOR###:###ZARF_PKG_TMPL_UDS_VERSION### -a ###ZARF_PKG_TMPL_ARCH###
+            description: "Pull the UDS K3D slim dev bundle"
+
+          - cmd: |
+              docker pull ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION###
+            description: "Pull the k3d-gpu image"
       onDeploy:
         before:
           - cmd: |
-              set +e
-              docker run -d --name ###ZARF_PKG_TMPL_REG_NAME### -p ${ZARF_VAR_REG_PORT}:5000 registry:2
-              set -e
-            description: "Start the local registry"
-      onRemove:
-        before:
-          - cmd: |
-              set +e
-              docker stop ###ZARF_PKG_TMPL_REG_NAME###
-              docker rm ###ZARF_PKG_TMPL_REG_NAME###
-              set -e
-            description: "Stop and remove the local registry"
-
-  - name: build-image
-    required: true
-    files:
-      - source: Dockerfile
-        target: Dockerfile
-      - source: plugin/device-plugin-daemonset.yaml
-        target: plugin/device-plugin-daemonset.yaml
-    actions:
-      onDeploy:
-        before:
-          - cmd: |
-              docker build \
-                --platform linux/amd64 \
-                --build-arg K3S_TAG=${ZARF_VAR_K3S_TAG} \
-                --build-arg CUDA_TAG=${ZARF_VAR_CUDA_TAG} \
-                -t ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION### \
-                -f ./Dockerfile .
-
-              docker tag \
-                ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION### \
-                localhost:${ZARF_VAR_REG_PORT}/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION###
-            description: "Build the k3d-gpu image"
-        after:
-          - cmd:
-              docker push localhost:${ZARF_VAR_REG_PORT}/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION###
-            description: "Push the image to the local registry"
-
-  - name: create-cluster
-    required: true
-    actions:
-      onDeploy:
-        before:
-          - cmd: |
-              uds deploy ${ZARF_VAR_UDS_CORE} \
+              uds deploy uds-bundle-###ZARF_PKG_TMPL_UDS_FLAVOR###-###ZARF_PKG_TMPL_ARCH###-###ZARF_PKG_TMPL_UDS_VERSION###.tar.zst \
                 --set K3D_EXTRA_ARGS="--gpus=all \
-                --image=localhost:${ZARF_VAR_REG_PORT}/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION###" \
-                --no-progress --insecure --confirm
+                --image=ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:###ZARF_PKG_TMPL_VERSION###" \
+                --no-progress --confirm
             description: "Create a k3d cluster with GPU support"
       onRemove:
         before:
