--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -12,10 +12,6 @@ permissions:
   contents: read
   packages: write
 
-env:
-  K3S_TAG: ""
-  CUDA_TAG: ""
-
 jobs:
   build-and-publish-images:
     runs-on: ubuntu-latest
@@ -24,11 +20,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-      - name: Read tags from config
-        id: read_tags
-        run: |
-          echo "K3S_TAG=$(jq -r .k3s_tag packages/k3d-gpu/version_config.json)" >> $GITHUB_ENV
-          echo "CUDA_TAG=$(jq -r .cuda_tag packages/k3d-gpu/version_config.json)" >> $GITHUB_ENV
+      - name: Version
+        id: get_version
+        uses: battila7/get-version-action@90eb8fc70f6dfcf3f9b95ed8f164d2c05038e729 # v2.2.1
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
@@ -37,12 +31,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and Publish k3d-gpu
+      - name: Install Zarf
+        uses: defenseunicorns/setup-zarf@f95763914e20e493bb5d45d63e30e17138f981d6 # v1.0.0
+
+      - name: Build and Publish k3d-gpu image
         run: |
           docker build \
             --platform linux/amd64 \
-            --build-arg K3S_TAG=${{ env.K3S_TAG }} \
-            --build-arg CUDA_TAG=${{ env.CUDA_TAG }} \
-            -t ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:latest \
+            -t ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:${{ steps.get_version.outputs.version-without-v }} \
             -f packages/k3d-gpu/Dockerfile .
-          docker push ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:latest
+          docker push ghcr.io/defenseunicorns/leapfrogai/k3d-gpu:${{ steps.get_version.outputs.version-without-v }}
+
+      - name: Build and Publish k3d-gpu package
+        run: |
+          zarf package create packages/k3d-gpu --set=VERSION=${{ steps.get_version.outputs.version-without-v }} --confirm
+          zarf package publish zarf-package-leapfrogai-k3d-gpu-amd64-${{ steps.get_version.outputs.version-without-v }}.tar.zst \
+            oci://ghcr.io/defenseunicorns/packages/leapfrogai
