add uds cli to workflow

--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: Build and Publish k3d-gpu package
         run: |
           cd packages/k3d-gpu
+          wget https://github.com/defenseunicorns/uds-cli/releases/download/v0.13.1/uds-cli_v0.13.1_Linux_amd64
+          sudo chmod +x uds-cli_v0.13.1_Linux_amd64
+          sudo mv uds-cli_v0.13.1_Linux_amd64 /usr/local/bin/uds
           zarf package create --set=VERSION=${{ steps.get_version.outputs.version-without-v }} --confirm
           zarf package publish zarf-package-leapfrogai-k3d-gpu-amd64-${{ steps.get_version.outputs.version-without-v }}.tar.zst \
             oci://ghcr.io/defenseunicorns/packages/leapfrogai
