remove description and add comment

--- a/.github/workflows/e2e-1.yaml
+++ b/.github/workflows/e2e-1.yaml
@@ -1,5 +1,6 @@
+# End-to-end testing that deploys and tests Supabase, API, UI, and VLLM
+
 name: e2e-1
-description: End-to-end testing that deploys and tests Supabase, API, UI, and VLLM
 on:
   pull_request:
     types:
