--- a/.github/workflows/e2e-2.yaml
+++ b/.github/workflows/e2e-2.yaml
@@ -1,5 +1,6 @@
+# End-to-end testing that deploys Supabase and the API, and deploy/tests llama-cpp-python, text-embeddings, and whisper
+
 name: e2e-2
-description: End-to-end testing that deploys Supabase and the API, and deploy/tests llama-cpp-python, text-embeddings, and whisper
 on:
   pull_request:
     types:
