--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [  # Dev dependencies needed for all of lfai
     "httpx",
     "ruff",
     "python-dotenv",
-    "pytest-asyncio",
+    "pytest-asyncio"
 ]
 requires-python = "~=3.11"
 
