--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,12 +1,9 @@
 name: Build Images
 
 on:
-  workflow_dispatch:
-  pull_request:
-    types:
-      - ready_for_review
-      - review_requested
-      - synchronize
+  push:
+    tags:
+      - "*"
 
 permissions:
   contents: read
