chore: example using helm templating to set runtime className

--- a/packages/whisper/whisper-values.yaml
+++ b/packages/whisper/whisper-values.yaml
@@ -1,9 +1,6 @@
 image:
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
-gpu:
-  className: "###ZARF_VAR_GPU_CLASS_NAME###"
-
 resources:
   limits:
-    nvidia.com/gpu: "###ZARF_VAR_GPU_LIMIT###"
+    nvidia.com/gpu: ###ZARF_VAR_GPU_LIMIT###
