chore: add example of class name overrides

--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -42,8 +42,9 @@ resources:
     cpu: 0
     memory: 0
 
-gpu:
+runtime:
   className: "nvidia"
+  classNameOverride: ""
 
 autoscaling:
   enabled: false
