--- a/packages/whisper/chart/templates/deployment.yaml
+++ b/packages/whisper/chart/templates/deployment.yaml
@@ -25,8 +25,10 @@ spec:
       labels:
         {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
-      {{- if gt (index .Values.resources.limits "nvidia.com/gpu") 0.0 }}
-      runtimeClassName: {{ .Values.gpu.className }}
+      {{- if .Values.runtime.classNameOverride }}
+      runtimeClassName: {{ .Values.runtime.classNameOverride }}
+      {{- else if gt (index .Values.resources.limits "nvidia.com/gpu") 0.0 }}
+      runtimeClassName: {{ .Values.runtime.className }}
       {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
