--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -128,6 +128,9 @@ jobs:
           run: |
             cp src/leapfrogai_ui/.env.example src/leapfrogai_ui/.env
             TEST_ENV=CI PUBLIC_DISABLE_KEYCLOAK=true PUBLIC_SUPABASE_ANON_KEY=$ANON_KEY npm --prefix src/leapfrogai_ui run test:integration:ci
+
+        # Upload the Playwright report as an artifact
+        - name: Archive Playwright Report
           uses: actions/upload-artifact@v4
           if: ${{ !cancelled() }}
           with:
