Pulls supabase-realtime image from official instead of bitnami

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -75,6 +75,9 @@ realtime:
   resourcesPreset: "none"
   podLabels:
     sidecar.istio.io/inject: "false"
+  image:
+    repository: supabase/realtime
+    tag: latest
 
 rest:
   enabled: ###ZARF_VAR_ENABLE_REST###
