chore: split out e2e workflows by GenAI Model

--- a/.github/workflows/e2e-playright.yaml
+++ b/.github/workflows/e2e-playright.yaml
@@ -1,6 +1,6 @@
 # End-to-end testing that deploys and tests Supabase, API, UI, and VLLM
 
-name: e2e-1
+name: e2e-playright
 on:
   pull_request:
     types:
@@ -139,12 +139,3 @@ jobs:
         - name: Cleanup UI
           run: |
             uds zarf package remove leapfrogai-ui --confirm
-
-        ##########
-        # vLLM
-        # NOTE: We are not deploying and testing vLLM in this workflow because it requires a GPU
-        #     : This workflow simply verifies that the vLLM package can be built
-        ##########
-        - name: Build vLLM
-          run: |
-            make build-vllm LOCAL_VERSION=e2e-test
