--- a/.github/workflows/e2e-llama.yaml
+++ b/.github/workflows/e2e-llama.yaml
@@ -34,6 +34,10 @@ on:
       # Ignore non e2e tests
       - "!tests/pytest/**"
 
+      # Ignore LFAI-UI things (for now?)
+      - "!src/leapfrogai_ui/**"
+      - "!packages/ui/**"
+
       # Ignore changes to the repeater model
       - "!packages/repeater/**"
 
@@ -67,7 +71,7 @@ jobs:
 
         - name: Create UDS Cluster
           run: |
-            uds deploy k3d-core-slim-dev:0.23.0 --confirm
+            uds deploy k3d-core-slim-dev:0.22.2 --confirm
 
         ##########
         # Supabase
@@ -109,48 +113,3 @@ jobs:
           run: |
             python -m pip install requests
             python -m pytest ./tests/e2e/test_llama.py -v
-
-        - name: Cleanup llama-cpp-python
-          run: |
-            uds zarf package remove llama-cpp-python -l=trace --confirm
-
-        ##########
-        # text-embeddings
-        ##########
-        - name: Deploy text-embeddings
-          run: |
-            make build-text-embeddings LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/text-embeddings/zarf-package-text-embeddings-amd64-e2e-test.tar.zst -l=trace --confirm
-            rm packages/text-embeddings/zarf-package-text-embeddings-amd64-e2e-test.tar.zst
-
-        - name: Test text-embeddings
-          run: |
-            python -m pytest ./tests/e2e/test_text_embeddings.py -v
-
-        - name: Cleanup text-embeddings
-          run: |
-            uds zarf package remove text-embeddings -l=trace --confirm
-
-        ##########
-        # whisper
-        ##########
-        - name: Deploy whisper
-          run: |
-            make build-whisper LOCAL_VERSION=e2e-test
-            docker image prune -af
-            uds zarf package deploy packages/whisper/zarf-package-whisper-amd64-e2e-test.tar.zst -l=trace --confirm
-            rm packages/whisper/zarf-package-whisper-amd64-e2e-test.tar.zst
-
-        - name: Test whisper
-          run: |
-            python -m pytest ./tests/e2e/test_whisper.py -v
-
-        - name: Cleanup whisper
-          run: |
-            uds zarf package remove whisper -l=trace --confirm
-
-        # This cleanup may need to be moved/removed when other packages depend on Supabase
-        - name: Cleanup Supabase
-          run: |
-            uds zarf package remove supabase -l=trace --confirm
