--- a/.github/workflows/e2e-llama.yaml
+++ b/.github/workflows/e2e-llama.yaml
@@ -8,42 +8,42 @@ on:
       - review_requested
       - synchronize
       - milestoned
-    paths:
-      # Catch-all
-      - "**"
+    # paths:
+    #   # Catch-all
+    #   - "**"
 
-      # Ignore updates to the .github directory, unless it's this current file
-      - "!.github/**"
-      - ".github/workflows/e2e-2.yaml"
+    #   # Ignore updates to the .github directory, unless it's this current file
+    #   - "!.github/**"
+    #   - ".github/workflows/e2e-2.yaml"
 
-      # Ignore docs and website things
-      - "!**.md"
-      - "!docs/**"
-      - "!adr/**"
-      - "!website/**"
-      - "!netlify.toml"
+    #   # Ignore docs and website things
+    #   - "!**.md"
+    #   - "!docs/**"
+    #   - "!adr/**"
+    #   - "!website/**"
+    #   - "!netlify.toml"
 
-      # Ignore updates to generic github metadata files
-      - "!CODEOWNERS"
-      - "!.gitignore"
-      - "!LICENSE"
+    #   # Ignore updates to generic github metadata files
+    #   - "!CODEOWNERS"
+    #   - "!.gitignore"
+    #   - "!LICENSE"
 
-      # Ignore local development files
-      - "!.pre-commit-config.yaml"
+    #   # Ignore local development files
+    #   - "!.pre-commit-config.yaml"
 
-      # Ignore non e2e tests
-      - "!tests/pytest/**"
+    #   # Ignore non e2e tests
+    #   - "!tests/pytest/**"
 
-      # Ignore LFAI-UI things (for now?)
-      - "!src/leapfrogai_ui/**"
-      - "!packages/ui/**"
+    #   # Ignore LFAI-UI things (for now?)
+    #   - "!src/leapfrogai_ui/**"
+    #   - "!packages/ui/**"
 
-      # Ignore changes to the repeater model
-      - "!packages/repeater/**"
+    #   # Ignore changes to the repeater model
+    #   - "!packages/repeater/**"
 
 
 concurrency:
-  group: e2e-2-${{ github.ref }}
+  group: e2e-llama-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
