--- a/.github/workflows/e2e-whisper.yaml
+++ b/.github/workflows/e2e-whisper.yaml
@@ -43,7 +43,7 @@ on:
 
 
 concurrency:
-  group: e2e-2-${{ github.ref }}
+  group: e2e-whisper-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
