--- a/.github/workflows/e2e-llama-cpp-python.yaml
+++ b/.github/workflows/e2e-llama-cpp-python.yaml
@@ -1,6 +1,6 @@
 # End-to-end testing that deploys Supabase and the API, and deploy/tests llama-cpp-python, text-embeddings, and whisper
 
-name: e2e-llama
+name: e2e-llama-cpp-python
 on:
   pull_request:
     types:
@@ -8,42 +8,45 @@ on:
       - review_requested
       - synchronize
       - milestoned
-    # paths:
-    #   # Catch-all
-    #   - "**"
+    paths:
+      # Catch-all
+      - "**"
 
-    #   # Ignore updates to the .github directory, unless it's this current file
-    #   - "!.github/**"
-    #   - ".github/workflows/e2e-2.yaml"
+      # Ignore updates to the .github directory, unless it's this current file
+      - "!.github/**"
+      - ".github/workflows/e2e-llama-cpp-python.yaml"
 
-    #   # Ignore docs and website things
-    #   - "!**.md"
-    #   - "!docs/**"
-    #   - "!adr/**"
-    #   - "!website/**"
-    #   - "!netlify.toml"
+      # Ignore docs and website things
+      - "!**.md"
+      - "!docs/**"
+      - "!adr/**"
+      - "!website/**"
+      - "!netlify.toml"
 
-    #   # Ignore updates to generic github metadata files
-    #   - "!CODEOWNERS"
-    #   - "!.gitignore"
-    #   - "!LICENSE"
+      # Ignore updates to generic github metadata files
+      - "!CODEOWNERS"
+      - "!.gitignore"
+      - "!LICENSE"
 
-    #   # Ignore local development files
-    #   - "!.pre-commit-config.yaml"
+      # Ignore local development files
+      - "!.pre-commit-config.yaml"
 
-    #   # Ignore non e2e tests
-    #   - "!tests/pytest/**"
+      # Ignore non e2e tests changes
+      - "!tests/pytest/**"
 
-    #   # Ignore LFAI-UI things (for now?)
-    #   - "!src/leapfrogai_ui/**"
-    #   - "!packages/ui/**"
+      # Ignore LFAI-UI source code changes
+      - "!src/leapfrogai_ui/**"
 
-    #   # Ignore changes to the repeater model
-    #   - "!packages/repeater/**"
-
+      # Ignore changes to unrelated packages
+      - "!packages/k3d-gpu/**"
+      - "!packages/repeater/**"
+      - "!packages/text-embeddings/**"
+      - "!packages/ui/**"
+      - "!packages/vllm/**"
+      - "!packages/whisper/**"
 
 concurrency:
-  group: e2e-llama-${{ github.ref }}
+  group: e2e-llama-cpp-python-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
