--- a/.github/workflows/e2e-whisper.yaml
+++ b/.github/workflows/e2e-whisper.yaml
@@ -50,7 +50,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  e2e_2:
+  e2e_whisper:
     runs-on: ai-ubuntu-big-boy-8-core
     if: ${{ !github.event.pull_request.draft }}
 
