--- a/.github/workflows/e2e-playright.yaml
+++ b/.github/workflows/e2e-playright.yaml
@@ -49,7 +49,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  e2e_1:
+  e2e_playright:
     runs-on: ai-ubuntu-big-boy-8-core
     if: ${{ !github.event.pull_request.draft }}
 
