chore: add PVC to vllm package to store model weights

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -10,7 +10,7 @@ ARG HF_HUB_ENABLE_HF_TRANSFER="1"
 ARG REPO_ID="TheBloke/Synthia-7B-v2.0-GPTQ"
 ARG REVISION="gptq-4bit-32g-actorder_True"
 ARG QUANTIZATION="gptq"
-ARG MODEL_SOURCE=".model/"
+ARG MODEL_SOURCE="/data/.model/"
 ARG MAX_CONTEXT_LENGTH=32768
 ARG STOP_TOKENS='["</s>","<|endoftext|>","<|im_end|>"]'
 ARG PROMPT_FORMAT_CHAT_SYSTEM="SYSTEM: {}\n"
@@ -67,7 +67,7 @@ ARG HF_HUB_ENABLE_HF_TRANSFER="1"
 ARG REPO_ID="TheBloke/Synthia-7B-v2.0-GPTQ"
 ARG REVISION="gptq-4bit-32g-actorder_True"
 ARG QUANTIZATION="gptq"
-ARG MODEL_SOURCE=".model/"
+ARG MODEL_SOURCE="/data/.model/"
 ARG MAX_CONTEXT_LENGTH=32768
 ARG STOP_TOKENS='["</s>","<|endoftext|>","<|im_end|>"]'
 ARG PROMPT_FORMAT_CHAT_SYSTEM="SYSTEM: {}\n"
@@ -120,9 +120,6 @@ ENV LAI_PROMPT_FORMAT_CHAT_ASSISTANT=${PROMPT_FORMAT_CHAT_ASSISTANT}
 ENV LAI_PROMPT_FORMAT_CHAT_USER=${PROMPT_FORMAT_CHAT_USER}
 ENV LAI_PROMPT_FORMAT_DEFAULTS_TOP_P=${PROMPT_FORMAT_DEFAULTS_TOP_P}
 ENV LAI_PROMPT_FORMAT_DEFAULTS_TOP_K=${PROMPT_FORMAT_DEFAULTS_TOP_K}
-
-RUN pip install -U huggingface_hub[cli,hf_transfer]
-RUN python3 packages/vllm/src/model_download.py
 
 EXPOSE 50051:50051
 
